# weblab

./: LICENSE  README.md
customersapi/: Makefile  pyproject.toml  wsgi.py
customersapi/customers/: main.py
customersapi/customers/api/: resources.py  schema.py
customersapi/customers/ext/opentelemetry/: config.py
myfastapi/: Makefile  pyproject.toml
myfastapi/myfastapi/api/: ext.py  main.py
myflaskapi/: Makefile  pyproject.toml  settings.py  wsgi.py
myflaskapi/myflaskapi/api/: __init__.py  ext.py  main.py
myflaskapi/myflaskapi/api/customers/: __init__.py  data.py  resources.py  schema.py
ordersapi/: Makefile  pyproject.toml  settings.py
ordersapi/orders/: main.py
ordersapi/orders/api/: resources.py  schema.py
ordersapi/orders/ext/service/customers/: __init__.py  entities.py  http.py
