[tool.poetry]
name = "myfastapi"
version = "0.1.0"
description = ""
authors = ["Victor Martinez <victor.martinez@lend.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
opentelemetry-sdk = "^1.17.0"
opentelemetry-api = "^1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
