[tool.poetry]
name = "myfastapi"
version = "0.1.0"
description = ""
authors = ["Victor Martinez <victor.martinez@lend.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
opentelemetry-sdk = "^1.17.0"
opentelemetry-api = "^1.17.0"
uvicorn = "^0.21.1"
opentelemetry-distro = "^0.38b0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
