[tool.poetry]
name = "myflaskapi"
version = "0.1.0"
description = ""
authors = ["Victor Martinez <victor.martinez@lend.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
opentelemetry-distro = "^0.38b0"
opentelemetry-sdk = "^1.17.0"
opentelemetry-api = "^1.17.0"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
