[tool.poetry]
name = "orders"
version = "0.1.0"
description = ""
authors = ["Victor Martinez <victor.martinez@lend.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
opentelemetry-sdk = "^1.17.0"
opentelemetry-api = "^1.17.0"
uvicorn = "^0.21.1"
aiohttp = "^3.8.4"
opentelemetry-exporter-otlp = "^1.18.0"
opentelemetry-instrumentation-fastapi = "^0.39b0"
opentelemetry-distro = "^0.39b0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
